--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 *.iml
-.gradle
 /local.properties
+/Express.iws
 /.idea/workspace.xml
-/.idea/libraries
-.DS_Store
+/.gradle
+/.idea
 /build
-/captures
-.externalNativeBuild
+/app/build
