--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".sample.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -17,11 +17,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.CustomViewActivity"
+            android:name=".sample.customview.CustomViewActivity"
             android:label="@string/title_activity_custom_view">
         </activity>
-        <activity android:name=".activity.CanvasDemoActivity">
+        <activity android:name=".sample.customview.CanvasDemoActivity">
         </activity>
+
+        <activity android:name=".sample.recylerview.RecylerViewActivity"/>
+        <activity android:name=".sample.recylerview.Demo1Activity"/>
+        <activity android:name=".sample.recylerview.Demo2Activity"/>
+        <activity android:name=".sample.recylerview.Demo3Activity1"/>
+        <activity android:name=".sample.recylerview.Demo3Activity2"/>
+        <activity android:name=".sample.recylerview.Demo4Activity"/>
+        <activity android:name=".sample.recylerview.Demo5Activity"/>
+        <activity android:name=".sample.recylerview.DiffActivity"/>
+
     </application>
 
 </manifest>
