Retrofit+Rxjava+Okhttp 简单封装

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest package="com.shangbb.studysample"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".SysApplication"
         android:allowBackup="true"
@@ -20,8 +23,9 @@
             android:name=".sample.customview.CustomViewActivity"
             android:label="@string/title_activity_custom_view">
         </activity>
-        <activity android:name=".sample.customview.CanvasDemoActivity">
-        </activity>
+        <activity android:name=".sample.customview.PicViewActivity"/>
+        <activity android:name=".sample.customview.CheckViewActivity"/>
+        <activity android:name=".sample.customview.LeafloadingViewActivity"/>
 
         <activity android:name=".sample.recylerview.RecylerViewActivity"/>
         <activity android:name=".sample.recylerview.Demo1Activity"/>
