将city.json中的数据存入数据库，生成db文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     //reactivex
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
+
+    compile 'org.litepal.android:core:1.5.1'
 }
