--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.shangbb.studysample"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -18,7 +18,7 @@ android {
         }
     }
 
-    sourceSets{
+    sourceSets {
         main {
             java.srcDirs = ['src/main/java', 'src/main/aidl']
         }
@@ -38,6 +38,9 @@ dependencies {
 
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
 
+    //6.0权限适配
+    compile 'pub.devrel:easypermissions:0.4.2'
+
 
     compile 'com.google.code.gson:gson:2.8.0'
 
@@ -46,9 +49,12 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    //reactivex
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
+
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
 
     compile 'org.litepal.android:core:1.5.1'
+
+    //多进程数据共享
+    compile 'net.grandcentrix.tray:tray:0.11.1'
 }
