--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".SysApplication"
@@ -49,6 +53,8 @@
             android:process=":bbsMessenger"/>
 
         <activity android:name=".sample.ipc.aidl.AidlActivity"/>
+        <activity android:name=".sample.x5.X5WebviewActivity"/>
+
         <service
             android:name=".sample.ipc.aidl.AidlService"
             android:process=":bbsAidl">
